--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>YF-eSounde </title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    <div class="card">
@@ -17,8 +17,8 @@
            </div>
        </div>
    </div>
-   <script src="/js/Data.js"></script>
-    <script src="/js/play.js"></script>
-    <script src="/js/global.js"></script>
+   <script src="js/Data.js"></script>
+    <script src="js/play.js"></script>
+    <script src="js/global.js"></script>
 </body>
 </html>
