--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
            </div>
        </div>
    </div>
-   <script src="js/Data.js"></script>
-    <script src="js/play.js"></script>
-    <script src="js/global.js"></script>
+   <script src="public/js/Data.js"></script>
+    <script src="public/js/play.js"></script>
+    <script src="public/js/global.js"></script>
 </body>
 </html>
